# PawFreeze

./: README.md  pyproject.toml
.github/workflows/: test.yml
PawFreeze/: __main__.py  camera.py  config.py  keyboard.py  state.py  ui.py  vlm.py
tests/: conftest.py  test_keyboard.py  test_state.py  test_vlm.py
